--- a/index.html
+++ b/index.html
@@ -2,44 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <title>Whack a Mole!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Whack a Mole!</title>
 </head>
 
 <body>
-    <h1>Whack-a-mole!</h1><span class="score">0</span>
-    <button onClick="startGame()">Start!</button>
+  <h1>Whack-a-mole!</h1><span class="score">0</span>
+  <button onclick="startGame()">Start!</button>
 
-    <div class="game">
-        <div class="hole hole1">
-            <div class="mole"></div>
-        </div>
-
-        <div class="hole hole2">
-            <div class="mole"></div>
-        </div>
-
-        <div class="hole hole3">
-            <div class="mole"></div>
-        </div>
-
-        <div class="hole hole4">
-            <div class="mole"></div>
-        </div>
-
-        <div class="hole hole5">
-            <div class="mole"></div>
-        </div>
-
-        <div class="hole hole6">
-            <div class="mole"></div>
-        </div>
-
+  <div class="game">
+    <div class="hole hole1">
+      <div class="mole"></div>
     </div>
-    <script src="script.js"></script>
+
+    <div class="hole hole2">
+      <div class="mole"></div>
+    </div>
+
+    <div class="hole hole3">
+      <div class="mole"></div>
+    </div>
+
+    <div class="hole hole4">
+      <div class="mole"></div>
+    </div>
+
+    <div class="hole hole5">
+      <div class="mole"></div>
+    </div>
+
+    <div class="hole hole6">
+      <div class="mole"></div>
+    </div>
+
+  </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
