--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Whack-a-mole!</h1><span class="score">0</span>
-  <button onclick="startGame()">Start!</button>
+  <button onclick="game()">Start!</button>
 
   <div class="game">
     <div class="hole hole1">
